compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__guards__string_variable_access.snap
---
source: compiler-core/src/type_/tests/guards.rs
expression: "\npub fn a(a: String) {\n  case a {\n    _ if a.b -> 1\n    _ -> 0\n  }\n}\n"
---
----- SOURCE CODE

pub fn a(a: String) {
  case a {
    _ if a.b -> 1
    _ -> 0
  }
}


----- ERROR
error: Unknown record field
  ┌─ /src/one/two.gleam:4:12
  │
4 │     _ if a.b -> 1
  │            ^ This field does not exist

The value being accessed has this type:

    String

It does not have any fields.
